# pycastle

./: .gitignore  .tmp_issue408_body.md  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml
.github/scripts/: ci-autofix.sh
.github/workflows/: publish.yml
docs/: cron-setup.md  usage.md
docs/adr/: 0001-runtime-dependency-installation.md  0002-cli-native-model-shorthand-resolution.md  0003-global-user-scope-config-and-env.md  0004-github-pat-as-sole-credential.md  0005-dual-claude-account-failover.md  0005-stage-completion-via-role-dir-not-commit-prefix.md  0006-session-resume-across-container-teardown.md  0007-stage-completion-via-role-dir-not-commit-prefix.md  0008-centralized-usagelimit-catch-at-iteration-boundary.md  0008-per-phase-session-namespacing-for-improve-mode.md  0009-prompt-renderer-with-scoped-placeholder-tiers.md  0010-per-phase-session-namespacing-for-improve-mode.md  0010-prompt-rendering-in-agent-runner-not-container-runner.md  0011-recently-closed-filter-for-github-list-endpoint.md  0011-remove-skip-preflight-route-merger-through-cache.md  0012-pin-implement-sha-from-planner.md  0012-prompt-rendering-in-agent-runner-not-container-runner.md  0013-content-addressed-preflight-cache.md  0013-preflight-failure-as-exception.md  0013-remove-skip-preflight-route-merger-through-cache.md  0013-three-mode-implement-slice-with-explicit-gate.md  0014-pin-implement-sha-from-planner.md  0014-remove-skip-preflight-route-merger-through-cache.md  0014-semantic-xml-tags-for-agent-prompts.md  0015-persist-agent-drafts-in-role-session-dir.md  0015-pluggable-agent-services-per-stage-fallback.md  0016-implicit-image-verify-on-pycastle-run.md  0016-three-mode-implement-slice-with-explicit-gate.md  0017-codex-auth-via-per-role-bind-mount.md  0017-semantic-xml-tags-for-agent-prompts.md  0018-persist-agent-drafts-in-role-session-dir.md  0018-shared-gh-issue-tracker-fragment-in-default-prompts.md  0019-destination-scoped-auto-issue-gate.md  0019-implicit-image-verify-on-pycastle-run.md  0020-codex-auth-via-per-role-bind-mount.md  0020-unified-status-row-wrapper.md  0021-operator-actionable-git-failures.md  0021-shared-gh-issue-tracker-fragment-in-default-prompts.md  0021-shared-rest-issue-tracker-fragment-in-default-prompts.md  0022-destination-scoped-auto-issue-gate.md  (+65 more)
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
implementer/codex/: auth.json
pycastle/: .gitignore  Dockerfile  config.py
pycastle/prompts/: CODING_STANDARDS.md  bug-report.md  implement-prompt.md  merge-prompt.md  plan-prompt.md  review-prompt.md
pycastle/prompts/standards/: interfaces.md  mocking.md  refactoring.md  tests.md
src/pycastle/: __init__.py  _host_check.py  _time.py  _types.py  _universal_image_build.py  account_pool.py  agent_credential_failure_routing.py  agent_output_protocol.py  agent_result.py  agent_runner.py  bug_reporter.py  build_command.py  claude_service.py  config.py  container_runner.py  diagnostic_issue_report_validation.py  diagnostic_mount_fallback.py  docker_service.py  docker_session.py  errors.py  execution_contracts.py  git_service.py  github_service.py  init_command.py  issue_readiness.py  label_catalog.py  labels.py  layout.py  log_maintenance.py  main.py  managed_worktree_mount_policy.py  orchestration.py  orchestrator.py  parsed_event_reducer.py  preflight_tool_failure_analysis.py  prompt_pipeline.py  prompt_utils.py  provider_errors.py  provider_session_adapter.py  reprompt_loop.py  (+16 more)
src/pycastle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pycastle/agents/: _work_invocation.py  classifier.py  output_protocol.py  protocol_reprompt.py  result.py  runner.py  session_dispatch.py  session_state.py
src/pycastle/commands/: build.py  check.py  host_check_run.py  init.py  labels.py
src/pycastle/config/: __init__.py  env_loader.py  loader.py  types.py  validator.py
src/pycastle/defaults/: .gitignore  Dockerfile  Dockerfile.claude  Dockerfile.claude-codex  Dockerfile.codex  Dockerfile.opencode  config.py  cron-install.sh  cron-uninstall.sh  cron.sh  pi-setup.md
src/pycastle/display/: rich_status_display.py  status_display.py  status_print_sequencing.py
src/pycastle/infrastructure/: _logged_line_stream.py  agent_invocation_log.py  container_runner.py  docker_session.py  preflight_failure_interpreter.py  preflight_tool_classifier.py  shutdown_hook.py  worktree.py  worktree_lifecycle_debug.py
src/pycastle/init_wizard/: __init__.py  planning.py
src/pycastle/iteration/: __init__.py  _deps.py  _merge_conflict_recovery.py  _merge_reporting.py  (+21 more)
src/pycastle_agent_runtime/: __init__.py  _import_isolation.py  agent_invocation_log.py  agent_log.py  agent_role.py  agent_service.py  contracts.py  error_types.py  errors.py  execution_contracts.py  orchestration.py  parsed_event_reducer.py  provider_errors.py  provider_session_adapter.py  pyproject.toml  runtime.py  service_registry.py  session.py  session_planning.py  stage_priority_chain.py  usage_limit_decision.py  work.py
tests/: _helpers.py  conftest.py  test_account_pool.py  test_agent_credential_failure_routing.py  test_agent_invocation_log.py  test_agent_output_protocol.py  test_agent_result.py  test_agent_run_session_state.py  test_agent_runner.py  test_agent_runtime.py  test_bug_reporter.py  test_build_command.py  test_check_command.py  test_ci_autofix_script.py  test_claude_service.py  test_codex_service.py  test_config.py  test_config_new.py  test_container_runner.py  test_credential_pool.py  test_cron_command.py  test_cron_scripts.py  test_default_prompts.py  test_defaults_config_example.py  test_deps.py  test_diagnostic_issue_report_validation.py  test_diagnostic_mount_fallback.py  test_dispatcher.py  test_docker_build_output.py  test_docker_service.py  test_docker_session.py  test_env_loader.py  test_errors.py  test_git_remote_retry.py  test_git_service.py  test_github_service.py  test_hard_agent_error_report.py  test_host_check_loop.py  test_host_check_run.py  test_implement.py  (+66 more)
tests/support/: __init__.py  iteration.py
(+112 files in other folders)
