[project]
name = "pycastle"
dynamic = ["version"]
description = "Python orchestrator for autonomous Claude Code agents in Docker"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "docker",
    "platformdirs",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "types-docker",
]

[project.scripts]
pycastle = "pycastle.main:main"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pycastle = [
    "defaults/.gitignore",
    "defaults/config.py",
    "defaults/Dockerfile",
    "defaults/prompts/plan-prompt.md",
    "defaults/prompts/implement-prompt.md",
    "defaults/prompts/review-prompt.md",
    "defaults/prompts/merge-prompt.md",
    "defaults/prompts/CODING_STANDARDS.md",
    "defaults/prompts/preflight-issue.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require a live Docker daemon and the pycastle image",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
