[project]
name = "pycastle"
dynamic = ["version"]
description = "Python orchestrator for autonomous Claude Code agents in Docker"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "docker",
    "platformdirs",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "setuptools>=68",
    "setuptools-scm>=8",
    "types-docker",
]

[project.scripts]
pycastle = "pycastle.main:main"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pycastle = [
    "py.typed",
    "defaults/.gitignore",
    "defaults/config.py",
    "defaults/Dockerfile",
    "defaults/prompts/_implement-review-shared-framing.md",
    "defaults/prompts/_issue-tracker.md",
    "defaults/prompts/_placeholder-info.md",
    "defaults/prompts/_resume-prompt.md",
    "defaults/prompts/coding-standards/design.md",
    "defaults/prompts/coding-standards/implement-output-rules.md",
    "defaults/prompts/coding-standards/implementation.md",
    "defaults/prompts/diverge-prompt.md",
    "defaults/prompts/failure-report.md",
    "defaults/prompts/host-check-issue.md",
    "defaults/prompts/improve/01-scan.md",
    "defaults/prompts/improve/02-prd.md",
    "defaults/prompts/improve/03-issues.md",
    "defaults/prompts/improve/04-no-candidate-report.md",
    "defaults/prompts/plan-prompt.md",
    "defaults/prompts/implement/behavior.md",
    "defaults/prompts/implement/refactor.md",
    "defaults/prompts/implement/docs.md",
    "defaults/prompts/review-prompt.md",
    "defaults/prompts/merge-prompt.md",
    "defaults/prompts/preflight-issue.md",
    "defaults/setup/cron-install.sh",
    "defaults/setup/cron-uninstall.sh",
    "defaults/setup/cron.sh",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require a live Docker daemon and the pycastle image",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
