[project]
name = "pycastle"
dynamic = ["version"]
description = "Python orchestrator for autonomous Claude Code agents in Docker"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "docker",
    "platformdirs",
    "python-dotenv",
    "rich",
    "ruhken-agent-runtime>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "setuptools>=68",
    "setuptools-scm>=8",
    'tzdata; platform_system == "Windows"',
    "types-docker",
]

[project.scripts]
pycastle = "pycastle.main:main"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pycastle", "pycastle.*"]

[tool.setuptools.package-data]
pycastle = [
    "py.typed",
    "defaults/.gitignore",
    "defaults/config.py",
    "defaults/Dockerfile",
    "defaults/prompts/coordination/diverge.md",
    "defaults/prompts/coordination/merge.md",
    "defaults/prompts/coordination/plan.md",
    "defaults/prompts/coordination/_expected-output-shape-diverge.md",
    "defaults/prompts/coordination/_expected-output-shape-merge.md",
    "defaults/prompts/coordination/_expected-output-shape-plan.md",
    "defaults/prompts/diagnostics/failure-report.md",
    "defaults/prompts/diagnostics/host-check-issue.md",
    "defaults/prompts/diagnostics/preflight-issue.md",
    "defaults/prompts/diagnostics/_expected-output-shape-failure-report.md",
    "defaults/prompts/diagnostics/_expected-output-shape-host-check-issue.md",
    "defaults/prompts/diagnostics/_expected-output-shape-preflight-issue.md",
    "defaults/prompts/improve/01-scan.md",
    "defaults/prompts/improve/02-prd.md",
    "defaults/prompts/improve/03-issues.md",
    "defaults/prompts/improve/04-no-candidate-report.md",
    "defaults/prompts/improve/_expected-output-shape-01-scan.md",
    "defaults/prompts/improve/_expected-output-shape-02-prd.md",
    "defaults/prompts/improve/_expected-output-shape-03-issues.md",
    "defaults/prompts/shared/_issue-tracker.md",
    "defaults/prompts/shared/_placeholder-info.md",
    "defaults/prompts/shared/resume.md",
    "defaults/prompts/shared/standards/_design.md",
    "defaults/prompts/shared/standards/_implementation.md",
    "defaults/prompts/work/_output-rules.md",
    "defaults/prompts/work/_shared-instructions.md",
    "defaults/prompts/work/_expected-output-shape-behavior.md",
    "defaults/prompts/work/_expected-output-shape-implementation.md",
    "defaults/prompts/work/behavior.md",
    "defaults/prompts/work/docs.md",
    "defaults/prompts/work/refactor.md",
    "defaults/prompts/work/review.md",
    "defaults/setup/cron-install.sh",
    "defaults/setup/cron-uninstall.sh",
    "defaults/setup/cron.sh",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require a live Docker daemon and the pycastle image",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
